--- a/spring/2022.4.7.md
+++ b/spring/2022.4.7.md
@@ -6,9 +6,95 @@
 
 这个星期的天气都很好
 
+------
 
+-------
 
+昨天做了个梦
 
+梦到了我和小方去吃鸡
 
+我们两个被派去一个军事基地
 
+天黑了趁着月色打掩护偷偷摸摸爬进去
+
+我们在一个房子里埋伏
+
+过了好久
+
+等到天快亮了
+
+又两个人来了
+
+有一个人先进来的
+
+被我们暗杀
+
+还有一个人发现不对劲
+
+立马推门而入
+
+我和他对枪
+
+怕怕几下把他打死
+
+然后缴了他们的抢
+
+开始上子弹
+
+感觉子弹号有点对不上
+
+缴来的子弹有点大
+
+上起来好费劲
+
+哈哈哈哈哈
+
+--------
+
+------------
+
+小方给我买的衣服
+
+穿起来还挺舒服的
+
+大小味道也不错
+
+这次买的确实不错
+
+--------
+
+--------------
+
+今天泛海挺多的
+
+可以回去做蛋炒饭
+
+要是没吃完的话
+
+明天继续煮粥吃
+
+最近煮粥还是煮的太干了
+
+这个控制一下
+
+---------
+
+---------
+
+下个星期想做饼干或者蛋糕
+
+周末在家买一下材料
+
+感觉又好久都没做饼干了
+
+家里还买了好多饼干盒子
+
+还和好多朋友说要送饼干给他们吃呢
+
+哈哈哈哈哈
+
+-------------
+
+---------------
 
