--- a/spring/2022.4.26.md
+++ b/spring/2022.4.26.md
@@ -8,3 +8,91 @@
 
 我看我已经好几天没写了
 
+------
+
+----------
+
+脑袋昏昏的
+
+-------
+
+--------
+
+昨天做了一个梦
+
+梦到了....
+
+想起来
+
+好像梦到我去打工
+
+去了上海
+
+在一起七七乖乖的房子里
+
+遇到了几个混混
+
+还有一个混混的女朋友
+
+我居然认是哈哈哈哈
+
+然后他们拉我打牌
+
+其实我不想打的
+
+但是我怕他们几个打劫我
+
+这地方我人生地不熟的
+
+然后还没开始
+
+一个小混混和她女朋友不知道怎么吵架了
+
+然后他女朋友就走了
+
+就是我认识的那个人
+
+然后我们抽牌的时候
+
+那人再和他女朋友打电话
+
+然后场面有点混乱
+
+我好像少抽了一张牌
+
+反正后面打着打着那个就和她女朋友吵起来了
+
+后来好像闹着要分手
+
+再后来警察来了
+
+把两个小混混抓走了
+
+然后领走之前那两个小混混让我和另一个小混混去赎他们
+
+我去警察局花了40块钱把他们救回来了
+
+--------
+
+----------
+
+然后我们就去田里抓鱼了还是干啥了
+
+记不清了哈哈哈哈
+
+然后我在一个河下面的洞里
+
+发现了两个钓鱼竿
+
+还是贼高级的那种
+
+然后我们准备去钓鱼
+
+然后好像就行了
+
+
+
+------------
+
+--------------
+
