分手啦啦啦啦啦啦

--- a/spring/2022.7.6.md
+++ b/spring/2022.7.6.md
@@ -10,13 +10,15 @@
 
 把登录的时候把用户信息都存在了redis里
 
-然后统一了返回的json格式
-
-等等
+然后统一了返回的json格式等等
 
 总之这个星期先把用户权限这一块写好
 
 然后就开始写我的日志系统了
+
+哈哈
+
+不过进度好慢嗷
 
 ----------
 
@@ -39,6 +41,14 @@
 后期一个Q直接打残对面
 
 强呀我
+
+最近看直播知道了一个神装备
+
+那就是什么锤
+
+考尔~菲德的战锤
+
+哈哈哈哈哈哈
 
 ------------
 
@@ -88,19 +98,66 @@
 
 给我的感觉是那种很刺激的
 
-但是我像起不来
+但是我想起不来
 
 -------
 
 --------
 
-春天走了,
+涨红了脸生了气
 
-从今天起我不想在和那肥胖的人
+到了第二天
 
-开口说话了.
+又没什么了,是我觉得寂寞
 
 -------------从来我也很可爱啊
+
+-------
+
+---------
+
+这两天再看一本书
+
+叫做<<从前我也很可爱啊>>
+
+刚刚突然发现
+
+作者写的三行小诗都是按照当前的事情发展和心情写的
+
+刚刚与我前几天的想法不谋而合了
+
+我也可以借鉴一下
+
+哈哈哈哈
+
+````从前我也很可爱啊
+一三八
+院子里的石头上，
+当的把手表扔去，
+从前的我发怒的样子很可怀念。
+一三九
+涨红了脸生了气，
+到了第二天
+又没什么了，使我觉得寂寞。
+一四〇
+焦急的心啊，你悲哀了，
+来吧来吧，
+且稍微打点呵欠什么的吧。
+````
+
+感觉这样的叙述很有意思
+
+很符合我的气质的
+
+洋溢的朴实无华的帅起
+
+又流露出诗的才华横溢
+
+不得了不得了哦
+
+-------
+
+--------
 
 
 
