--- a/spring/2022.7.12.md
+++ b/spring/2022.7.12.md
@@ -127,6 +127,70 @@ overload第四季要更新了哈哈哈
 灯灯最近有点无精打采了
 
 ```
+TheShun:
+医生,最近两天我家猫一直无精打采的
+
+TheShun:
+是太热的缘故吗
+
+TheShun:
+以前他总是挺有精神的
+
+斯曼尔动物医院:
+不太会是因为热
+
+斯曼尔动物医院:
+食欲不好的话就需要做检查了
+
+TheShun:
+昨天我看他还是有正常吃饭喝水的
+
+TheShun:
+就是他现在老是躺着
+
+斯曼尔动物医院:
+好的 食量没有变化的话就再观察一下好了
+
+TheShun:
+昨天我推他都没什么反应,我差点以为他嗝屁了
+
+斯曼尔动物医院:
+要看吃的量的变化
+
+斯曼尔动物医院:
+吃的少可能就不对了
+
+TheShun:
+嗯嗯好的,那我观察一下
+
+斯曼尔动物医院:
+太热的时候还是要做一下降温措施的
+
+TheShun:
+有什么建议吗
+
+TheShun:
+在家的时候还可以开空通,不在家的时候要怎么降温呀
+
+斯曼尔动物医院:
+暴晒的地方不要让他去，多备几个干净的水碗，风扇可以长开的
+
+TheShun:
+好的
+
+TheShun:
+谢谢医生
 
 ```
 
+不知道怎么了
+
+灯灯最近无尽打彩的
+
+有点小担心
+
+-----------
+
+-------------
+
+//爱你爱你爱你,随时都要离去,我想你想你想你,想到快要死去
