--- a/spring/2022.7.8.md
+++ b/spring/2022.7.8.md
@@ -58,7 +58,7 @@
 
 就这样锐雯渐渐长大
 
-知道有一次洛克萨斯招兵
+直到有一次洛克萨斯招兵
 
 锐雯主动申请成为了洛克萨斯的士兵
 
@@ -216,7 +216,9 @@
 
 是附近村子里的一对夫妻救了他
 
+看着手里的剑她还是想好毁掉它
 
+于是他问救他的是
 
 ---------
 
