想要去和她和好

--- a/FYL/2022.7.28.md
+++ b/FYL/2022.7.28.md
@@ -298,3 +298,105 @@
 
 -----------
 
+还是想问你
+
+会不会回来
+
+-------
+
+------------
+
+突然想到了
+
+我每次觉得很累都躺在床上一动不动
+
+可能就是想要你多关心关心我
+
+我觉自己对你的热亲慢慢淡了些许
+
+处于虚弱期
+
+哪个时候我可能很想很想你可以温柔的来照顾我
+
+慢慢的让我回到原来那
+
+非常非常喜欢你非常非常有活力的那个我
+
+因为我也觉得现在需要你为我做很多很多事情
+
+我才会给你很多很多
+
+--------
+
+-------------
+
+我也记得你说过要我付出很多很多
+
+你才会对我付出
+
+但是其实我已经为你付出很多很多了
+
+只是你不了解我,也没有察觉到罢了
+
+其实你的重心很少放在我身上
+
+而我自认为都是一直在为你考虑的
+
+因为大部分心思在你身上
+
+我的喜欢
+
+可能太过于古板了
+
+我真的是如果话题还没有聊完的话
+
+我会一直等你的消息的
+
+我总是挂念着你
+
+一开始是这样而且回秒回你
+
+直到我发现你上班的时候基本不太爱回我的消息
+
+我就不太秒回了
+
+我想这把握自己的事情昨完了再说
+
+-----
+
+------------
+
+一开始我觉得你是大于一切的
+
+因为我觉得你需要我的时候我会放下自己的自尊心去找你
+
+就像你住院了
+
+我会来照顾你
+
+因为我觉得这是我作为男朋友该做的事情
+
+如果你要我来的话
+
+我可能就会辞职来照顾你
+
+但是你没有
+
+也可能是你的习惯性拒绝
+
+让我们错失了很多机会
+
+一起共同经历难关的机会
+
+我们没有经历过大风大浪
+
+所以我们的感情才那么经不起考验
+
+即使因为很小的事情也会生气
+
+到最后都不能为了对方放下自己的自尊心
+
+---------
+
+-----------------
+
